class(gen): destroy all data done

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,16 +13,14 @@ include_directories(include)
 find_package(OpenSSL REQUIRED)
 include_directories(${OPENSSL_INCLUDE_DIR})
 
-add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS}
-        src/utils/files.cpp
-        include/utils/files.h
-        src/commands/glob/glob.cpp
-        include/commands/glob/glob.h
-        src/commands/set/set.cpp
-        include/commands/set/set.h)
+add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS})
 
 set_target_properties(${PROJECT_NAME} PROPERTIES
         RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../target
 )
 
 target_link_libraries(${PROJECT_NAME} ${OPENSSL_LIBRARIES})
+
+execute_process(COMMAND sh -c "ln -s ../assets/help-text ../target"
+        COMMAND sh -c "ln -s ../assets/personal-data ../target"
+        WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
