--- a/assets/personal-data/config.ini
+++ b/assets/personal-data/config.ini
@@ -1,3 +1,3 @@
 [Globals]
-hash=a.a.a
-token=snefiosneilcmseicmsilemel
+hash=a.a.a.a.a.a.a.a.a.a.a.a.a.a.a.a.a.a.a.a.a.a.a.a.a.a.a.a.a.a.a.a.a.a.a.a
+token=olCTYod7mj6EcYe4qw
