--- a/assets/personal-data/config.ini
+++ b/assets/personal-data/config.ini
@@ -1,3 +1,3 @@
-[Globals]
-hash=a.a.a.a.a.a.a.a.a.a.a.a.a.a.a.a.a.a.a.a.a.a.a.a.a.a.a.a.a.a.a.a.a.a.a.a
-token=Vz8vHe7BxKmH0eEdr8
+[globals]
+token=C4bkl1NWISs9ijjpio
+hash=a.a.b.b.-.c.c.d.d
