global commands made

--- a/assets/personal-data/config.ini
+++ b/assets/personal-data/config.ini
@@ -1,3 +1,3 @@
 [globals]
-token=nYNdHWAWuFz0h9XD7u
-hash=b.ab.ab.a.-.c.c.c.c
+token=Bjku6rcOEwuB8kxfJHM9R0tBTghyc0sBNVh9XciaaCpQa4uk
+format=b.ab.ab.a.-.c.c.c.c
